fix: remove .html results from tree since they're too large (it's a gamble for commits)

--- a/notebooks/pathway.ipynb
+++ b/notebooks/pathway.ipynb
@@ -268,7 +268,12 @@
     "# !wget -nc http://bigg.ucsd.edu/static/models/iAB_RBC_283.json\n",
     "\n",
     "builder = Builder(model_json='./sampes/iAB_RBC_283.json', map_name=\"e_coli_core.Core metabolism\")\n",
-    "builder.save_html('./samples/iAB_RBC_283.html')"
+    "builder.save_html('./samples/iAB_RBC_283.html')\n",
+    "\n",
+    "# NOTE: Escher needs a template map to visualize the model according to it. You need to: \n",
+    "# (1) see the format of the map.json file\n",
+    "# (2) create a mapping data (auto-generate if you can) to show what reactions fall where\n",
+    "# (3) use the map data to visualize the model"
    ]
   }
  ],
