feat: setup for parsing and monitoring nucleic alterations

--- a/notebooks/pathway.ipynb
+++ b/notebooks/pathway.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "67c41e69",
    "metadata": {
     "collapsed": true,
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2a1257e5",
    "metadata": {},
    "outputs": [
@@ -209,16 +209,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Creinhardtii_v5_5\n",
-      "loading model ... (from: ../data/raw/creinhardtii_v5p5.json)\n",
-      "building escher graph ...\n",
-      "Saving the visual as:  ../results/plots/creinhardtii_v5p5/metabolism.html\n"
+      "[{'organism': 'Saccharomyces cerevisiae', 'map_name': 'iMM904.Central carbon metabolism'}, {'organism': 'Homo sapiens', 'map_name': 'RECON1.Inositol retinol metabolism'}, {'organism': 'Homo sapiens', 'map_name': 'RECON1.Glycolysis TCA PPP'}, {'organism': 'Homo sapiens', 'map_name': 'RECON1.Tryptophan metabolism'}, {'organism': 'Homo sapiens', 'map_name': 'RECON1.Carbohydrate metabolism'}, {'organism': 'Homo sapiens', 'map_name': 'RECON1.Amino acid metabolism (partial)'}, {'organism': 'Escherichia coli', 'map_name': 'iJO1366.Nucleotide metabolism'}, {'organism': 'Escherichia coli', 'map_name': 'iJO1366.Fatty acid biosynthesis (saturated)'}, {'organism': 'Escherichia coli', 'map_name': 'iJO1366.Nucleotide and histidine biosynthesis'}, {'organism': 'Escherichia coli', 'map_name': 'e_coli_core.Core metabolism'}, {'organism': 'Escherichia coli', 'map_name': 'iJO1366.Central metabolism'}, {'organism': 'Escherichia coli', 'map_name': 'iJO1366.Fatty acid beta-oxidation'}]\n"
      ]
     }
    ],
    "source": [
-    "import escher\n",
     "from escher import Builder\n",
+    "import escher\n",
     "\n",
     "from cobra import io\n",
     "import os\n",
@@ -230,23 +227,26 @@
     "print(f\"getting metabolism from: {xml_path}\")\n",
     "model, error = io.validate_sbml_model(xml_path)\n",
     "\n",
-    "print(model)\n",
-    "if model:\n",
+    "res = escher.list_available_maps()\n",
     "\n",
-    "    json_path = f'../data/raw/{model_name}.json'\n",
-    "    print(f\"loading model ... (from: {json_path})\")\n",
-    "    io.save_json_model(model, json_path)\n",
+    "print(res)\n",
     "\n",
-    "    print(\"building escher graph ...\")\n",
-    "    builder = Builder(\n",
-    "        model_json=json_path\n",
-    "    )\n",
+    "# if model:\n",
     "\n",
-    "    dest_path = f'../results/plots/{model_name}/metabolism.html'\n",
-    "    if not os.path.exists(dest_path):\n",
-    "        os.makedirs(os.path.dirname(dest_path))\n",
-    "    print(\"Saving the visual as: \", dest_path)\n",
-    "    builder.save_html(dest_path)\n"
+    "#     json_path = f'../data/raw/{model_name}.json'\n",
+    "#     print(f\"loading model ... (from: {json_path})\")\n",
+    "#     io.save_json_model(model, json_path)\n",
+    "\n",
+    "#     print(\"building escher graph ...\")\n",
+    "#     builder = Builder(\n",
+    "#         model_json=json_path\n",
+    "#     )\n",
+    "\n",
+    "#     dest_path = f'../results/plots/{model_name}/metabolism.html'\n",
+    "#     if not os.path.exists(dest_path):\n",
+    "#         os.makedirs(os.path.dirname(dest_path))\n",
+    "#     print(\"Saving the visual as: \", dest_path)\n",
+    "#     builder.save_html(dest_path)\n"
    ]
   },
   {
