feat: naming convention

--- a/notebooks/flux_analysis.ipynb
+++ b/notebooks/flux_analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "23824f3d",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "id": "f47d2969",
    "metadata": {},
    "outputs": [
@@ -45,91 +45,91 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQE+MVA from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQE+MVA.xml\n"
+      "Loading model: SQE+MVA from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQE+MVA.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQE from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQE.xml\n"
+      "Loading model: SQE from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQE.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQS+MVA from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQS+MVA.xml\n"
+      "Loading model: SQS+MVA from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQS+MVA.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQS+SQE+MVA from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQS+SQE+MVA.xml\n"
+      "Loading model: SQS+SQE+MVA from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQS+SQE+MVA.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQS+SQE from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQS+SQE.xml\n"
+      "Loading model: SQS+SQE from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQS+SQE.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading model: SQS from ../data/altered/xmls/MNL_iCre1355_GAPFILL/SQS.xml\n"
+      "Loading model: SQS from ../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQS.xml\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "ERROR\tTask(Task-3) cobra.io.sbml:sbml.py:_sbml_to_model()- No objective coefficients in model. Unclear what should be optimized\n"
+      "No objective coefficients in model. Unclear what should be optimized\n"
      ]
     },
     {
@@ -139,12 +139,12 @@
       "\n",
       "Loaded 7 models:\n",
       "  - Wildtype: None\n",
-      "  - SQE+MVA: MNL_iCre1355_GAPFILL_SQE+MVA\n",
-      "  - SQE: MNL_iCre1355_GAPFILL_SQE\n",
-      "  - SQS+MVA: MNL_iCre1355_GAPFILL_SQS+MVA\n",
-      "  - SQS+SQE+MVA: MNL_iCre1355_GAPFILL_SQS+SQE+MVA\n",
-      "  - SQS+SQE: MNL_iCre1355_GAPFILL_SQS+SQE\n",
-      "  - SQS: MNL_iCre1355_GAPFILL_SQS\n"
+      "  - SQE+MVA: MNL_iCre1355_auto_GAPFILL_SQE+MVA\n",
+      "  - SQE: MNL_iCre1355_auto_GAPFILL_SQE\n",
+      "  - SQS+MVA: MNL_iCre1355_auto_GAPFILL_SQS+MVA\n",
+      "  - SQS+SQE+MVA: MNL_iCre1355_auto_GAPFILL_SQS+SQE+MVA\n",
+      "  - SQS+SQE: MNL_iCre1355_auto_GAPFILL_SQS+SQE\n",
+      "  - SQS: MNL_iCre1355_auto_GAPFILL_SQS\n"
      ]
     }
    ],
@@ -153,14 +153,14 @@
     "\n",
     "# Load wildtype from manual directory (adjust path for notebooks directory)\n",
     "# Use io.read_sbml_model for local files instead of io.load_model\n",
-    "wildtype = io.read_sbml_model('../data/manual/xmls/MNL_iCre1355_GAPFILL.xml')\n",
+    "wildtype = io.read_sbml_model('../data/fill/xmls/MNL_iCre1355_auto_GAPFILL.xml')\n",
     "\n",
     "models = {\n",
     "    \"Wildtype\": wildtype\n",
     "}\n",
     "\n",
     "# Get altered reactions of wildtype - using correct directory name\n",
-    "altered_dir = '../data/altered/xmls/MNL_iCre1355_GAPFILL/'\n",
+    "altered_dir = '../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/'\n",
     "\n",
     "for root, dirs, files in os.walk(altered_dir):\n",
     "    for file in files:\n",
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "695773b2",
    "metadata": {},
    "outputs": [],
@@ -199,18 +199,18 @@
     "    IPP = \"ipdp_h\"\n",
     "    DMAPP = \"dmpp_h\"\n",
     "    # Sterol Compounds\n",
-    "    ERG = \"FILL_05\"\n",
-    "    EPI = \"FILL_02\"\n",
-    "    METLOP = \"FILL_01\"\n",
+    "    ERG = \"ergosterol_c\"\n",
+    "    EPI = \"episterol_c\"\n",
+    "    METLOP = \"methylop_c\"\n",
     "    FEC = \"mfecostrl_c\"\n",
     "    EPOXY = \"Ssq23epx_c\"\n",
     "    SQL = \"sql_c\"\n",
     "    # MVA Compounds\n",
-    "    MVA1 = \"C00356\"\n",
-    "    MVA2 = \"C00418\"\n",
-    "    MVA3 = \"C01107\"\n",
-    "    MVA4 = \"C01143\"\n",
-    "    MVA5 = \"C00009\"\n",
+    "    HMCOA = \"hydroxy_methyl_coa_c\"\n",
+    "    MVA = \"mva_c\"\n",
+    "    PMVA = \"phospho_mva_c\"\n",
+    "    DPMVA = \"diphospho_mva_c\"\n",
+    "    OP = \"orthophosphate_c\"\n",
     "\n",
     "class RxnID(Enum):\n",
     "    # Biomass\n",
@@ -223,7 +223,9 @@
     "    SQE = 'SMO'\n",
     "    SQE2 = 'ALT_SQE2'\n",
     "    CAS = 'CAS'\n",
-    "    ERG = 'RXNFILL_05'\n",
+    "    METLOP = 'FILL_HYD1'\n",
+    "    EPI = 'FILL_ERG28'\n",
+    "    ERG = 'FILL_ERG'\n",
     "    # MVA Pathway\n",
     "    MVAS = 'ALT_MVAS'\n",
     "    MVAE = 'ALT_MVAE'\n",
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "id": "1c71b6af",
    "metadata": {},
    "outputs": [],
@@ -300,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "id": "0fcf2c48",
    "metadata": {},
    "outputs": [
@@ -315,6 +317,8 @@
       "\tSS: 7.095647558651397e-15\n",
       "\tSQE: 7.095647558651396e-15\n",
       "\tCAS: 7.095647558651396e-15\n",
+      "\tMETLOP: 7.095647558651396e-15\n",
+      "\tEPI: 7.095647558651397e-15\n",
       "\tERG: 7.095647558651397e-15\n",
       "\tACS: 0.0\n",
       "\tATPCS: 0.0\n",
@@ -333,6 +337,8 @@
       "\tSQE: 9.478949727366664e-16\n",
       "\tSQE2: 0.06896551724137906\n",
       "\tCAS: 0.06896551724138003\n",
+      "\tMETLOP: 0.06896551724138002\n",
+      "\tEPI: 0.06896551724138002\n",
       "\tERG: 0.06896551724138002\n",
       "\tMVAS: 0.0\n",
       "\tMVAE: 0.0\n",
@@ -357,6 +363,8 @@
       "\tSQE: -1.6125762896718755e-16\n",
       "\tSQE2: 0.06896551724138122\n",
       "\tCAS: 0.06896551724138106\n",
+      "\tMETLOP: 0.06896551724138106\n",
+      "\tEPI: 0.06896551724138107\n",
       "\tERG: 0.06896551724138107\n",
       "\tACS: 0.0\n",
       "\tATPCS: 0.0\n",
@@ -375,6 +383,8 @@
       "\tSS2: -1.1695921095352231e-14\n",
       "\tSQE: -1.169592109535223e-14\n",
       "\tCAS: -1.169592109535223e-14\n",
+      "\tMETLOP: -1.1695921095352231e-14\n",
+      "\tEPI: -1.1695921095352234e-14\n",
       "\tERG: -1.1695921095352231e-14\n",
       "\tMVAS: 0.0\n",
       "\tMVAE: 0.0\n",
@@ -400,6 +410,8 @@
       "\tSQE: 4.1623665266711426e-16\n",
       "\tSQE2: 0.06896551724137973\n",
       "\tCAS: 0.06896551724138013\n",
+      "\tMETLOP: 0.06896551724138014\n",
+      "\tEPI: 0.06896551724138014\n",
       "\tERG: 0.06896551724138014\n",
       "\tMVAS: 0.0\n",
       "\tMVAE: 0.0\n",
@@ -425,6 +437,8 @@
       "\tSQE: -1.136077123466164e-16\n",
       "\tSQE2: 0.0689655172413796\n",
       "\tCAS: 0.06896551724137949\n",
+      "\tMETLOP: 0.06896551724137949\n",
+      "\tEPI: 0.06896551724137949\n",
       "\tERG: 0.06896551724137949\n",
       "\tACS: 0.0\n",
       "\tATPCS: 0.0\n",
@@ -443,6 +457,8 @@
       "\tSS2: 1.7190529524578766e-14\n",
       "\tSQE: 1.719052952457877e-14\n",
       "\tCAS: 1.719052952457877e-14\n",
+      "\tMETLOP: 1.719052952457877e-14\n",
+      "\tEPI: 1.719052952457877e-14\n",
       "\tERG: 1.7190529524578766e-14\n",
       "\tACS: 0.0\n",
       "\tATPCS: 0.0\n",
@@ -484,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "id": "948989df",
    "metadata": {},
    "outputs": [
@@ -497,7 +513,7 @@
       "                     minimum       maximum\n",
       "Biomass_Chlamy_auto     0.00  3.854623e-17\n",
       "ERGOSTEROLEXCH          0.04  4.000000e-02\n",
-      "RXNFILL_05              0.04  4.000000e-02\n",
+      "FILL_ERG                0.04  4.000000e-02\n",
       "SS                      0.04  4.000000e-02\n",
       "SMO                     0.04  4.000000e-02\n",
       "CAS                     0.04  4.000000e-02\n",
@@ -506,9 +522,9 @@
       "                          minimum       maximum\n",
       "Biomass_Chlamy_auto  0.000000e+00  1.243184e-15\n",
       "ERGOSTEROLEXCH       6.896552e-02  6.896552e-02\n",
-      "RXNFILL_05           6.896552e-02  6.896552e-02\n",
+      "FILL_ERG             6.896552e-02  6.896552e-02\n",
       "SS                   6.896552e-02  6.896552e-02\n",
-      "SMO                 -1.530359e-16  4.647404e-15\n",
+      "SMO                 -1.530359e-16  7.717955e-15\n",
       "ALT_SQE2             6.896552e-02  6.896552e-02\n",
       "CAS                  6.896552e-02  6.896552e-02\n",
       "ALT_MVAD             0.000000e+00  0.000000e+00\n",
@@ -522,7 +538,7 @@
       "                          minimum       maximum\n",
       "Biomass_Chlamy_auto  0.000000e+00  4.431678e-15\n",
       "ERGOSTEROLEXCH       6.896552e-02  6.896552e-02\n",
-      "RXNFILL_05           6.896552e-02  6.896552e-02\n",
+      "FILL_ERG             6.896552e-02  6.896552e-02\n",
       "SS                   6.896552e-02  6.896552e-02\n",
       "SMO                  1.578838e-15 -3.388540e-15\n",
       "ALT_SQE2             6.896552e-02  6.896552e-02\n",
@@ -532,7 +548,7 @@
       "                     minimum       maximum\n",
       "Biomass_Chlamy_auto     0.00  2.018870e-15\n",
       "ERGOSTEROLEXCH          0.04  4.000000e-02\n",
-      "RXNFILL_05              0.04  4.000000e-02\n",
+      "FILL_ERG                0.04  4.000000e-02\n",
       "SS                      0.00  4.000000e-02\n",
       "ALT_SQS2                0.00  4.000000e-02\n",
       "SMO                     0.04  4.000000e-02\n",
@@ -548,7 +564,7 @@
       "                          minimum       maximum\n",
       "Biomass_Chlamy_auto  0.000000e+00  1.379382e-15\n",
       "ERGOSTEROLEXCH       6.896552e-02  6.896552e-02\n",
-      "RXNFILL_05           6.896552e-02  6.896552e-02\n",
+      "FILL_ERG             6.896552e-02  6.896552e-02\n",
       "SS                   0.000000e+00  6.896552e-02\n",
       "ALT_SQS2             0.000000e+00  6.896552e-02\n",
       "SMO                 -1.346948e-15  2.124131e-15\n",
@@ -565,7 +581,7 @@
       "                          minimum       maximum\n",
       "Biomass_Chlamy_auto  0.000000e+00  3.825609e-16\n",
       "ERGOSTEROLEXCH       6.896552e-02  6.896552e-02\n",
-      "RXNFILL_05           6.896552e-02  6.896552e-02\n",
+      "FILL_ERG             6.896552e-02  6.896552e-02\n",
       "SS                   0.000000e+00  6.896552e-02\n",
       "ALT_SQS2             0.000000e+00  6.896552e-02\n",
       "SMO                 -2.519919e-16  3.932684e-16\n",
@@ -576,7 +592,7 @@
       "                     minimum       maximum\n",
       "Biomass_Chlamy_auto     0.00 -3.883882e-15\n",
       "ERGOSTEROLEXCH          0.04  4.000000e-02\n",
-      "RXNFILL_05              0.04  4.000000e-02\n",
+      "FILL_ERG                0.04  4.000000e-02\n",
       "SS                      0.00  4.000000e-02\n",
       "ALT_SQS2                0.00  4.000000e-02\n",
       "SMO                     0.04  4.000000e-02\n",
@@ -626,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "id": "69909211",
    "metadata": {},
    "outputs": [
@@ -1607,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 14,
    "id": "7a0bb02f",
    "metadata": {},
    "outputs": [
