fix: cleanup | feat: chloroplast implementation of MVA

--- a/notebooks/mva.ipynb
+++ b/notebooks/mva.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 52,
    "id": "47e9a890",
    "metadata": {},
    "outputs": [
@@ -42,8 +42,13 @@
     }
    ],
    "source": [
+    "params = {\n",
+    "    'mode': 'auto',\n",
+    "    'chloroplast': True\n",
+    "}\n",
+    "\n",
     "# Gap-filled model\n",
-    "model = io.read_sbml_model('../data/altered/xmls/MNL_iCre1355_auto_GAPFILL/SQS+SQE+MVA.xml')\n",
+    "model = io.read_sbml_model(f'../data/altered/xmls/MNL_iCre1355_{params['mode']}_GAPFILL/{\"h/\" if params['chloroplast'] else \"\"}SQS+SQE+MVA.xml')\n",
     "\n",
     "# Add exchange reaction\n",
     "ERG = \"ergosterol_c\"\n",
@@ -70,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "8f185d6d",
    "metadata": {},
    "outputs": [
@@ -103,7 +108,7 @@
        "    <tr>\n",
        "      <th>ALT_MVAS</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.333895e-34</td>\n",
+       "      <td>-5.349016e-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALT_MVAD</th>\n",
@@ -113,17 +118,17 @@
        "    <tr>\n",
        "      <th>ALT_MVAE</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.333895e-34</td>\n",
+       "      <td>-5.349016e-31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALT_PMK</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>3.381919e-32</td>\n",
+       "      <td>0.000000e+00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALT_MVK</th>\n",
        "      <td>0.0</td>\n",
-       "      <td>1.333895e-34</td>\n",
+       "      <td>-2.790923e-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ALT_IDLI</th>\n",
@@ -136,15 +141,15 @@
       ],
       "text/plain": [
        "          minimum       maximum\n",
-       "ALT_MVAS      0.0  1.333895e-34\n",
+       "ALT_MVAS      0.0 -5.349016e-31\n",
        "ALT_MVAD      0.0  0.000000e+00\n",
-       "ALT_MVAE      0.0  1.333895e-34\n",
-       "ALT_PMK       0.0  3.381919e-32\n",
-       "ALT_MVK       0.0  1.333895e-34\n",
+       "ALT_MVAE      0.0 -5.349016e-31\n",
+       "ALT_PMK       0.0  0.000000e+00\n",
+       "ALT_MVK       0.0 -2.790923e-29\n",
        "ALT_IDLI      0.0  1.379310e-01"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "072096f5",
    "metadata": {},
    "outputs": [
@@ -281,6 +286,214 @@
     ")\n",
     "\n",
     "fva"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1db76b1d",
+   "metadata": {},
+   "source": [
+    "### FVA (Knock-out)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "8eed88bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>minimum</th>\n",
+       "      <th>maximum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>ALT_MVAS</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.178412e-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_MVAD</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_MVAE</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.178412e-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_PMK</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.160930e-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_MVK</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.063254e-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_IDLI</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.697661e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GPPS</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.390325e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>FPPS</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.390325e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SS</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.253351e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ALT_SQS2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.639191e-31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Biomass_Chlamy_auto</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.202793e-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ERGOSTEROLEXCH</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.253351e-31</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     minimum       maximum\n",
+       "ALT_MVAS                 0.0 -1.178412e-30\n",
+       "ALT_MVAD                 0.0  0.000000e+00\n",
+       "ALT_MVAE                 0.0 -1.178412e-30\n",
+       "ALT_PMK                  0.0 -1.160930e-30\n",
+       "ALT_MVK                  0.0 -4.063254e-30\n",
+       "ALT_IDLI                 0.0  1.697661e-31\n",
+       "GPPS                     0.0  3.390325e-31\n",
+       "FPPS                     0.0  3.390325e-31\n",
+       "SS                       0.0 -1.253351e-31\n",
+       "ALT_SQS2                 0.0  1.639191e-31\n",
+       "Biomass_Chlamy_auto      0.0 -1.202793e-15\n",
+       "ERGOSTEROLEXCH           0.0 -1.253351e-31"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp2 = model.copy()\n",
+    "\n",
+    "knockout = ['IDS1', 'IDS2', 'HDS', 'MCS', 'CMK', 'CMS', 'DXRI', 'DXS']\n",
+    "for k in knockout:\n",
+    "    rxn = temp2.reactions.get_by_id(k)\n",
+    "    rxn.lower_bound = 0\n",
+    "    rxn.upper_bound = 0\n",
+    "# alt = ['FRDPth', 'GRDPth', 'IPDPth']\n",
+    "# for rid in alt:\n",
+    "#     rxn = temp2.reactions.get_by_id(rid)\n",
+    "#     rxn.lower_bound = 0\n",
+    "#     rxn.upper_bound = 0\n",
+    "\n",
+    "# ACCOAth = temp2.reactions.get_by_id('ACCOAth')\n",
+    "# ACCOAth.lower_bound = -0.10\n",
+    "# ACCOAth.upper_bound = -0.10\n",
+    "\n",
+    "# ACACT = temp2.reactions.get_by_id('ACACT')\n",
+    "# ACACT.lower_bound = 0.05\n",
+    "# ACACT.upper_bound = 0.05\n",
+    "# ALT_MVAS = temp2.reactions.get_by_id('ALT_MVAS')\n",
+    "# ALT_MVAS.lower_bound = 0.05\n",
+    "# ALT_MVAS.upper_bound = 0.05\n",
+    "\n",
+    "fva = run_flux_variability_analysis(\n",
+    "    temp2,\n",
+    "    loopless=True,\n",
+    "    pfba_factor=None,\n",
+    "    objectives=[ERGEXCH],\n",
+    "    reactions=[\n",
+    "        'ALT_MVAS',\n",
+    "        'ALT_MVAD',\n",
+    "        'ALT_MVAE',\n",
+    "        'ALT_PMK',\n",
+    "        'ALT_MVK',\n",
+    "        'ALT_IDLI',\n",
+    "        'GPPS',\n",
+    "        'FPPS',\n",
+    "        'SS',\n",
+    "        'ALT_SQS2',\n",
+    "        'Biomass_Chlamy_auto',\n",
+    "        ERGEXCH,\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "fva"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "64b2b1d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs(os.path.join('.', 'temp', 'mva'), exist_ok=True)\n",
+    "io.write_sbml_model(temp, os.path.join('.', 'temp', 'mva', 'temp.xml'))\n",
+    "io.write_sbml_model(temp2, os.path.join('.', 'temp', 'mva', 'temp2.xml'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "17f190b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 1000.0\n",
+      "-1000.0 1000.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "atp = temp2.reactions.get_by_id('ATP_3h_th')\n",
+    "accoath = temp2.reactions.get_by_id('ACCOAth')\n",
+    "print(atp.lower_bound, atp.upper_bound)\n",
+    "print(accoath.lower_bound, accoath.upper_bound)"
    ]
   },
   {
