fix: naming for escher data

--- a/notebooks/dxs.ipynb
+++ b/notebooks/dxs.ipynb
@@ -11447,7 +11447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "36208e9f",
    "metadata": {},
    "outputs": [
@@ -11508,7 +11508,12 @@
     "    loopless=True,\n",
     "    pfba_factor=None,\n",
     "    objectives=['DXS'],\n",
-    "    reactions=['DXS', 'SS']\n",
+    "    reactions=[\n",
+    "        'DXS',\n",
+    "        'CDS',\n",
+    "        ''\n",
+    "        'SS',\n",
+    "    ]\n",
     ")\n",
     "\n",
     "fva"
