--- a/notebooks/sensitivity.ipynb
+++ b/notebooks/sensitivity.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "6d6ae11a",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
    "source": [
     "# Medium metabolites\n",
     "medium_mets = [\"h_e\",\"h2o_e\",\"pi_e\",\"nh4_e\",\"so4_e\",\"fe2_e\",\"mg2_e\",\"na1_e\",\"photonVis_e\",\"o2_e\",\"co2_e\"] \n",
-    "medium_rxns = ['CO2th'] # CO2 transport reaction to chloroplast is additionally to be inspected\n",
+    "medium_rxns = ['CO2th', 'EX_co2_e'] # CO2 transport reaction to chloroplast is additionally to be inspected\n",
     "\n",
     "for rxn in model.reactions:\n",
     "\n",
@@ -252,9 +252,9 @@
     "\n",
     "        medium_rxns.append(rxn.id)\n",
     "\n",
-    "        print(f'{rxn.id} | {rxn.name}')\n",
-    "        print(f'\\tR:{rs}')\n",
-    "        print(f'\\tP:{ps}\\n')"
+    "        # print(f'{rxn.id} | {rxn.name}')\n",
+    "        # print(f'\\tR:{rs}')\n",
+    "        # print(f'\\tP:{ps}\\n')"
    ]
   },
   {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "8140776e",
    "metadata": {},
    "outputs": [
@@ -535,7 +535,7 @@
     "    reactions=medium_rxns,\n",
     ")\n",
     "\n",
-    "fva"
+    "# fva"
    ]
   },
   {
