feat: sensitivity anaylsis 3D for photon x CO2

--- a/notebooks/dxs.ipynb
+++ b/notebooks/dxs.ipynb
@@ -11509,14 +11509,16 @@
     "    pfba_factor=None,\n",
     "    objectives=['DXS'],\n",
     "    reactions=[\n",
-    "        'DXS',\n",
-    "        'CDS',\n",
-    "        ''\n",
-    "        'SS',\n",
+    "        'DXS', 'DXRI',\n",
+    "        'CMS', 'CMK',\n",
+    "        'MCS', 'HDS',\n",
+    "        'IDS1', 'IDS2',\n",
+    "        'GPPSh', 'FPPSh',\n",
+    "        'SS', 'PSPPS'\n",
     "    ]\n",
     ")\n",
     "\n",
-    "fva"
+    "print(fva)"
    ]
   }
  ],
