feat: update mva escher | kinetic params notebook

--- a/notebooks/dxs.ipynb
+++ b/notebooks/dxs.ipynb
@@ -11447,59 +11447,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36208e9f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>minimum</th>\n",
-       "      <th>maximum</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>DXS</th>\n",
-       "      <td>0.339623</td>\n",
-       "      <td>0.339623</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SS</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      minimum   maximum\n",
-       "DXS  0.339623  0.339623\n",
-       "SS   0.000000  0.000000"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        minimum   maximum\n",
+      "DXS    0.339623  0.339623\n",
+      "DXRI   0.339623  0.339623\n",
+      "CMS    0.339623  0.339623\n",
+      "CMK    0.339623  0.339623\n",
+      "MCS    0.339623  0.339623\n",
+      "HDS    0.339623  0.339623\n",
+      "IDS1   0.301887  0.339623\n",
+      "IDS2   0.000000  0.037736\n",
+      "GPPSh  0.000000  0.037736\n",
+      "FPPSh  0.000000  0.037736\n",
+      "SS     0.000000  0.000000\n",
+      "PSPPS  0.000000  0.000000\n"
+     ]
     }
    ],
    "source": [
