feat: update gene_uniprot in gecko.ipynb

--- a/notebooks/gecko.ipynb
+++ b/notebooks/gecko.ipynb
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9f53a94e",
    "metadata": {},
    "outputs": [],
@@ -201,9 +201,9 @@
     "    # MVA Pathway\n",
     "    'MVAS': 'Q9FD71', # https://www.uniprot.org/uniprotkb/Q9FD71/entry\n",
     "    'MVAE': 'Q9FD65', # https://www.uniprot.org/uniprotkb/Q9FD65/publications\n",
-    "    'MVK': '',\n",
-    "    'PMK': '',\n",
-    "    'MVAD': '',\n",
+    "    'MVK': 'Q8PW39', # https://www.uniprot.org/uniprotkb/Q8PW39/entry\n",
+    "    'PMK': 'Q04430', # https://www.uniprot.org/uniprotkb/Q04430/entry\n",
+    "    'MVAD': 'P32377', # https://www.uniprot.org/uniprotkb/P32377/entry\n",
     "    'IDLI': '',\n",
     "    # MEP Pathway\n",
     "    'Cre07.g356350.t1.1': 'O81954', # https://www.uniprot.org/uniprotkb/O81954/entry\n",
@@ -218,8 +218,12 @@
     "    # 'ERG5': '',\n",
     "    # 'ERG4': '',\n",
     "    # Overexpressions (these will be storing an object with different gene id for strains)\n",
-    "    'SQS2': {},\n",
-    "    'SQE2': {},\n",
+    "    'SQS2': {\n",
+    "\n",
+    "    },\n",
+    "    'SQE2': {\n",
+    "\n",
+    "    },\n",
     "}"
    ]
   },
